2001-01-20  Ulrich Drepper  <drepper@redhat.com>

	* io/ftw.c (ftw_dir): Add slash after directory name if there
	wasn't any.  Reported by loris <loris@iol.it>.
	* io/Makefile (tests): Add bug-ftw2.
	* io/bug-ftw2.c: New file.

2001-01-19  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/jrand48_r.c (__jrand48_r): Correct constructing of
	results.  Reported by Jeff Higham <jhigham@algorithmics.com>.
	* stdlib/tst-rand48.c: New file.
	* stdlib/Makefile (tests): Add tst-rand48.

	* locale/newlocale.c (__newlocale): Fix test for setting all
	categories.

2001-01-19  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/mach/hurd/chroot.c (chroot): Revert 1999-02-27 changes,
	but change looking up the initial directory port in a similar way
	as done by _hurd_change_directory_port_from_name.
	* hurd/fchroot.c (fchroot): Likewise.

2001-01-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-sysdep.c (_dl_sysdep_start): If HAVE_AUX_XID is
	defined don't look whether the AT_*ID values were set.
	If HAVE_AUX_PAGESIZE is defined don't look whether the pagesize is set.
	(_dl_show_auxv): Rewrite to avoid switch statement.
	* sysdeps/unix/sysv/linux/kernel-features.h: Define
	__ASSUME_AT_PAGESIZE for kernel >= 2.4.1.
	* sysdeps/unix/sysv/linux/ldsodefs.h: Define HAVE_AUX_XID.
	Define HAVE_AUX_PAGESIZE if __ASSUME_AT_PAGESIZE is defined.

	* sysdeps/unix/sysv/linux/fxstat64.c: Add one __builtin_expect.
	* sysdeps/unix/sysv/linux/lxstat64.c: Likewise.
	* sysdeps/unix/sysv/linux/xstat64.c: Likewise.

	* elf/rtld.c (process_envvars): Call __strtoul_internal instead of
	strtoul.
	* elf/dl-minimal.c (strtol, __strtol_internal, strtoul): Removed.
	(__sigjmp_save): Set __mask_was_saved to zero since we don't save
	anything.
	* dlfcn/eval.c (__strtol_internal): Define here.
	(eval): Use __strtol_internal instead of strtol.

	* elf/elf.h: Add a few more EF_MIPS_* constants.

2001-01-17  Ulrich Drepper  <drepper@redhat.com>

	* manual/Makefile (chapters): Add debug.